<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_core</name>
  <version>0.0.0</version>
  <description>Core simulation nodes for sentry_sim.</description>
  <maintainer email="sunnycat_158@qq.com">somo</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>auto_aim_interfaces</depend>
  <depend>livox_ros_driver2</depend>
  <exec_depend>sim_assets</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
